--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bluebird": "1.0.8"
   },
   "devDependencies": {
+    "grunt-contrib-clean": "^0.6.0",
+    "load-grunt-tasks": "^3.3.0",
     "supertest": "^0.10.0"
   }
 }
