--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "grunt-nodemon": "^0.2.1",
     "grunt-mocha-test": "^0.10.0",
     "mongoose": "~3.8.8",
+    "supertest": "^0.10.0",
     "bluebird": "1.0.8"
   },
   "devDependencies": {
-    "supertest": "^0.10.0"
   }
 }
