Refactored fetchLinks and navToLink

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mocha": "^1.17.1",
     "mongoose": "^3.8.36",
     "request": "^2.34.0",
+    "sha1": "^1.1.1",
     "sqlite3": "~3.0.10",
     "supertest": "^0.10.0"
   },
